--- a/webapp/angular.html
+++ b/webapp/angular.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>toBike city stations</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
     <link href='main.css' rel='stylesheet' type='text/css'>
     <script src="main.js"></script>
 </head>
