--- a/webapp/angular.html
+++ b/webapp/angular.html
@@ -3,8 +3,10 @@
 <head>
     <title>toBike city stations</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
-    <link href='main.css' rel='stylesheet' type='text/css'>
-    <script src="main.js"></script>
+    <link href="css/main.css" rel='stylesheet' type='text/css'>
+    <script src="js/main.js"></script>
+    <script src="js/services.js"></script>
+    <script src="js/controllers.js"></script>
 </head>
 <body ng-app="bike">
     <div ng-controller="tableData as td">
