--- a/webapp/index.html
+++ b/webapp/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>toBike city stations</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
-    <link href="css/main.css" rel='stylesheet' type='text/css'>
+    <link href="css/common.css" rel='stylesheet' type='text/css'>
     <script src="js/common.js"></script>
 </head>
 <body ng-app="bike">
