--- a/webapp/index.html
+++ b/webapp/index.html
@@ -3,8 +3,10 @@
 <head>
     <title>toBike city stations</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
-    <link href="css/common.css" rel='stylesheet' type='text/css'>
     <script src="js/common.js"></script>
+    
+    <link rel='stylesheet' type='text/css' href='css/loading-bar.min.css' media='all' />
+    <link rel='stylesheet' type='text/css' href="css/common.css" >
 </head>
 <body ng-app="bike">
     <div ng-controller="tableData as td">
