--- a/webapp/index.html
+++ b/webapp/index.html
@@ -39,6 +39,7 @@
         </div>
             <span class="glyphicons glyphicons-bicycle"></span>
         <div ng-show="td.code != -1">
+            <div class="tcont">
             <table id="bikes">
                 <thead>
                     <tr>
@@ -65,6 +66,7 @@
                     </tr>
                 </tbody>
             </table>
+            </div>
         </div>
     </div>
 
